--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ photresistorValuePast1 = photresistorValue1;
 }
 <br />
 <br />
-<span style="color: #434F54">//Plays Megalovania</span>
+<span style="color: #434F54">//Plays Megalovania from Undertale</span>
 <br />
 <span style="color: #00979C">void</span> megalovania () {
 <br />
