--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
       #title {
         background-color: #00FFFF;
+        font-family: Arial;
         text-align: center;
       }
     </style>
