--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <style>
       #title {
         background-color: #00FFFF;
+        border: 0px;
         font-family: Arial;
+        margin: 0px;
+        padding: 0px;
         text-align: center;
       }
     </style>
