--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      #title {
-        background-color: #00FFFF;
-        font-family: Arial;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css.css">
   </head>
   <body>
     <div id="title">
