--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
     <div id="title">
       E Block Busy Board Project
     </div>
+    <div id="bar">
+      <a>Overiew</a>
+      <a>Materials</a>
+      <a href="arduinoCode.html">Code</a>
+      <a>Layout</a>
+      <a>More</a>
+    </div>
   </body>
 </html>
