--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <div id="title">
       E Block Busy Board Project
+      <br />
+      <span>Brian Norman, Erick Lakkham, & Harrison Ferwerda</span>
     </div>
     <div id="bar">
       <a>Overiew</a>
