--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="title">
       E Block Busy Board Project
       <br />
-      <span>Brian Norman, Erick Lakkham, & Harrison Ferwerda</span>
+      <span id="by">Brian Norman, Erick Lakkham, & Harrison Ferwerda</span>
     </div>
     <div id="bar">
       <a>Overiew</a>
