--- a/arduinoCode.html
+++ b/arduinoCode.html
@@ -1,7 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<body>
-		<code>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css.css">
+  </head>
+  <body>
+    <div id="title">
+      E Block Busy Board Project
+      <br />
+      <span id="by">Brian Norman, Erick Lakkham, & Harrison Ferwerda</span>
+    </div>
+    <div id="bar">
+      <a>Overiew</a>
+      <a>Materials</a>
+      <a href="arduinoCode.html">Code</a>
+      <a>Layout</a>
+      <a>More</a>
+    </div>
+    <code>
 <span style="color: #95A5A6">
 /*
 <br />
@@ -532,6 +547,6 @@ photresistorValuePast1 = photresistorValue1;
 <br />
 }
 <br />
-		</code>
-	</body>
+  	</code>
+  </body>
 </html>
