--- a/arduinoCode.html
+++ b/arduinoCode.html
@@ -12,10 +12,11 @@
     <div id="bar">
       <a>Overiew</a>
       <a>Materials</a>
-      <a href="arduinoCode.html">Code</a>
+      <a href="arduinoCode.html" style="background-color: #FFFFFF; color: #000000;">Code</a>
       <a>Layout</a>
       <a>More</a>
     </div>
+    <br />
     <code>
 <span style="color: #95A5A6">
 /*
