--- a/arduinoCode.html
+++ b/arduinoCode.html
@@ -10,7 +10,7 @@
       <span id="by">Brian Norman, Erick Lakkham, & Harrison Ferwerda</span>
     </div>
     <div id="bar">
-      <a>Overiew</a>
+      <a href="index.html">Overiew</a>
       <a>Materials</a>
       <a href="arduinoCode.html" style="background-color: #FFFFFF; color: #000000;">Code</a>
       <a>Layout</a>
