--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="index.html" style="background-color: #FFFFFF; color: #000000;">Overiew</a>
       <a>Materials</a>
       <a href="arduinoCode.html">Code</a>
-      <a>Layout</a>
+      <a href="layout.html">Layout</a>
       <a>More</a>
     </div>
   </body>
