--- a/layout.html
+++ b/layout.html
@@ -19,7 +19,7 @@
       <a href="layout.html" style="background-color: #FFFFFF; color: #000000;">Layout</a>
       <a>More</a>
       <br />
-      <img src="Project Layout.jpg" />
+      <img src="Project Layout.PNG" />
     </div>
   </body>
 </html>
