--- a/arduinoCode.html
+++ b/arduinoCode.html
@@ -16,7 +16,7 @@
       <a href="index.html">Overiew</a>
       <a>Materials</a>
       <a href="arduinoCode.html" style="background-color: #FFFFFF; color: #000000;">Code</a>
-      <a>Layout</a>
+      <a href="layout.html">Layout</a>
       <a>More</a>
     </div>
     <br />
