--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
       <a href="layout.html">Layout</a>
       <a>More</a>
     </div>
+    <br />
+    <p>The E Block Busy Board project has two main parts. The first is a group of RGB LED lights that are controlled using three buttons as input. When one button is pressed, it turns all the lights red, another turns the lights green, and the last turns them blue. Colors can be mixed by pressing multiple buttons at the same time. The default state of the buttons is off. The second part is a speaker that plays a short tune using two photoresistors as input. When the photoresistors are exposed to light after a period of not sensing any light, the speaker will play either Flagpole Fanfare from Super Mario Bros. or a part of Megalovania from Undertale. The inputs (buttons and photoresistors) and outputs (LEDs and speaker) are controlled and programed using an Arduino board (or equivalent).</p>
   </body>
 </html>
