--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </div>
     <div id="bar">
       <a href="index.html" style="background-color: #FFFFFF; color: #000000;">Overiew</a>
-      <a>Materials</a>
+      <a href="materials.html">Materials</a>
       <a href="arduinoCode.html">Code</a>
       <a href="layout.html">Layout</a>
-      <a>More</a>
+      <a href="more.html">More</a>
     </div>
     <br />
     <p>
