--- a/layout.html
+++ b/layout.html
@@ -16,10 +16,10 @@
     </div>
     <div id="bar">
       <a href="index.html">Overiew</a>
-      <a>Materials</a>
+      <a href="materials.html">Materials</a>
       <a href="arduinoCode.html">Code</a>
       <a href="layout.html" style="background-color: #FFFFFF; color: #000000;">Layout</a>
-      <a>More</a>
+      <a href="materials.html">More</a>
     </div>
     <br />
     <img src="Project Layout.PNG"/>
