--- a/materials.html
+++ b/materials.html
@@ -25,8 +25,7 @@
     <p>
       <ul>
         <li>Arduino board (or equivelent)</li>
-        <li>330Ω resistor x5</li>
-        <li>10kΩ resistor x3</li>
+        <li>330Ω resistor x5 & 10kΩ resistor x3</li>
         <li>Breadboard x2</li>
         <li>Button x3</li>
         <li>RGB LED x3</li>
