--- a/materials.html
+++ b/materials.html
@@ -24,14 +24,30 @@
     <br />
     <p>
       <ul>
-        <li>Arduino board (or equivelent)</li>
-        <li>330Ω resistor x5 & 10kΩ resistor x3</li>
-        <li>Breadboard x2</li>
-        <li>Button x3</li>
-        <li>RGB LED x3</li>
-        <li>Button x3</li>
-        <li>Photoresistor x2</li>
-        <li>Male/male jumper wire x20</li>
+        <li>
+          <a href="https://store.arduino.cc/usa/">Arduino board</a> (or <a href="https://www.sparkfun.com/products/13975">equivelent</a>)
+        </li>
+        <li>
+          330Ω <a href="https://www.adafruit.com/category/837">resistor</a> x5 & 10kΩ resistor x3
+        </li>
+        <li>
+          <a href="https://www.adafruit.com/category/124">Breadboard</a> x2
+        </li>
+        <li>
+          Button x3
+        </li>
+        <li>
+          RGB LED x3
+        </li>
+        <li>
+          Button x3
+        </li>
+        <li>
+          <a href="https://www.adafruit.com/product/159">Photoresistor</a> x2
+        </li>
+        <li>
+          <a href="https://www.adafruit.com/category/471">Male/male jumper wire</a> x20
+        </li>
       </ul>
     </p>
   </body>
