--- a/materials.html
+++ b/materials.html
@@ -34,16 +34,16 @@
           <a href="https://www.adafruit.com/category/124">Breadboard</a> x2
         </li>
         <li>
-          Button x3
+          <a href="https://www.adafruit.com/product/1119">Button</a> x3
         </li>
         <li>
-          RGB LED x3
+          <a href="https://www.adafruit.com/product/159">RGB LED</a> x3
         </li>
         <li>
-          Button x3
+          <a href="https://www.adafruit.com/product/1739">Speaker</a>
         </li>
         <li>
-          <a href="https://www.adafruit.com/product/159">Photoresistor</a> x2
+          <a href="https://www.adafruit.com/product/161">Photoresistor</a> x2
         </li>
         <li>
           <a href="https://www.adafruit.com/category/471">Male/male jumper wire</a> x20
