--- a/materials.html
+++ b/materials.html
@@ -31,7 +31,7 @@
           330Ω <a href="https://www.adafruit.com/category/837">resistor</a> x5 & 10kΩ resistor x3
         </li>
         <li>
-          <a href="https://www.adafruit.com/category/124">Breadboard</a> x2
+          <a href="https://www.adafruit.com/product/64">Breadboard</a> x2
         </li>
         <li>
           <a href="https://www.adafruit.com/product/1119">Button</a> x3
