--- a/more.html
+++ b/more.html
@@ -25,6 +25,7 @@
     <p>
       This image is a design of doors that were added to the photoresistors to make it so that a tune played whenever a door was opened. The buttons and lights were placed in between the doors.
     </p>
+    <img src="IMG_1672.JPG" />
     <img src="IMG_1649 (2).JPG" />
   </body>
 </html>
